[package]
name = "main_ninten_intern"
version = "0.1.0"
edition = "2021"

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1.0", features = ["full"] }
reqwest = "0.11"            
polars = { version = "0.35.0", features = ["lazy", "csv", "json"] }
rust_xlsxwriter = "0.34.0"
rand = "0.8.0"
uuid = { version = "1.0", features = ["v4"] }